--- a/jobs/pipeline.yml
+++ b/jobs/pipeline.yml
@@ -67,6 +67,9 @@
                       stage('python') {{
                           steps {{ build job: 'python-{arch}' }}
                       }}
+                      stage('pythonnt') {{
+                          steps {{ build job: 'pythonnt-{arch}' }}
+                      }}
                       stage('sdl') {{
                           steps {{ build job: 'sdl-{arch}' }}
                       }}
@@ -78,8 +81,14 @@
               stage('interrogate') {{
                   steps {{ build job: 'interrogate-{arch}' }}
               }}
+              stage('interrogatent') {{
+                  steps {{ build job: 'interrogatent-{arch}' }}
+              }}
               stage('panda3d') {{
-                  steps {{ build job: 'panda3d-{arch}' }}
+                  steps {{ build job: 'panda3dnt-{arch}' }}
+              }}
+              stage('panda3dnt') {{
+                  steps {{ build job: 'panda3dnt-{arch}' }}
               }}
               stage('panda3d-plugins') {{
                   parallel {{
@@ -88,6 +97,12 @@
                       }}
                       stage('panda3d-krender') {{
                           steps {{ build job: 'panda3d-krender-{arch}' }}
+                      }}
+                      stage('panda3dnt-kphys') {{
+                          steps {{ build job: 'panda3dnt-kphys-{arch}' }}
+                      }}
+                      stage('panda3dnt-krender') {{
+                          steps {{ build job: 'panda3dnt-krender-{arch}' }}
                       }}
                   }}
               }}
