--- a/jobs/sdk.yml
+++ b/jobs/sdk.yml
@@ -127,7 +127,7 @@
           copy /V /Y %CWD%\jobs\sdk\METADATA {install}\lib\site-packages\panda3d-1.11.0.dist-info
 
           set PYTHONHOME={install}
-          {install}\bin\python{python_version} -m ^
+          {install}\bin\python{python_app_version} -m ^
               pip install ^
               -C "--build-option=--py-limited-api \"\"" ^
               -r %CWD%\jobs\sdk\requirements.txt
@@ -170,16 +170,18 @@
           krender_dir: 'C:\\opt\\panda3d-krender'
           panda3d_dir: 'C:\\opt\\panda3d'
           python_dir: 'C:\\opt\\python'
+          python_app_version: '3.13t'
           python_version: '3.13t'
           variant: ''
       - 'sdk{variant}-winx64':
           build: 'C:\\build\\sdknt'
           discord_version: '3.2.1'
-          install: 'C:\\opt\\sdknd'
-          install_shared: 'Z:\\opt\\sdknd'
+          install: 'C:\\opt\\sdknt'
+          install_shared: 'Z:\\opt\\sdknt'
           kphys_dir: 'C:\\opt\\panda3dnt-kphys'
           krender_dir: 'C:\\opt\\panda3dnt-krender'
           panda3d_dir: 'C:\\opt\\panda3dnt'
           python_dir: 'C:\\opt\\pythonnt'
+          python_app_version: ''
           python_version: '3.12'
           variant: nt
